[package]
name = "resguard"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29.0"
procfs = "0.14.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.8"
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
chrono = "0.4.31"
nix = { version = "0.26.4", features = ["signal", "process"] }
regex = "1.10.2"
