[package]
name = "resguard"
version = "0.2.0"
edition = "2021"
description = "System load monitor with auto-throttling and interactive TUI"
authors = ["NickIBrody"]
license = "MIT"

[[bin]]
name = "load-monitor"
path = "src/main.rs"

[dependencies]
sysinfo    = "0.29.0"
serde      = { version = "1.0", features = ["derive"] }
toml       = "0.7.8"
tokio      = { version = "1.34.0", features = ["full"] }
anyhow     = "1.0"
thiserror  = "1.0"
chrono     = "0.4"
nix        = { version = "0.26", features = ["signal", "process"] }
regex      = "1.10"
ratatui    = "0.26"
crossterm  = "0.27"
